static/css/s2.css
body {
  padding: 0;
  margin: 0;
  overflow: hidden;
  color: #333;
  -webkit-text-size-adjust: 100%;
}
body {
  /* font-family: "proxima-nova", "Helvetica Neue", Helvetica, sans-serif; */
}
body .he {
  /* font-family: "Open Sans Hebrew", sans-serif; */
}
*::selection {
  background-color: #D2DCFF;
}
body.sepia {
  background-color: #F9F9F7;
}
body.dark {
  background-color: #333331; 
}
#sefaria {
  text-align: center;
}
#s2 {
  position: fixed;
  top: 0;
  width: 100%;
  height: 100%;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -o-user-select: none;
  z-index: 1000;
}
#s2.headerOnly {
  z-index: 1000;
  height: 54px;
  overflow: hidden;
}
.readerApp {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
}
.headerInner {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 54px;
  line-height: 54px;
  background: white;
  z-index: 1001;
  border-bottom: 1px solid #999;
  box-sizing: border-box;
  padding: 0px 20px;
  text-align: center;
  overflow: hidden;
}
.header .left {
  float: left;
  text-align: left;
  height: 54px;
  overflow: hidden;
}
.header .right {
  float: right;
  text-align: right;
}
.header .library, .header .home, .header .account, .header .notifications, .header .readerNavMenuSearchButton {
  cursor: pointer;
}
.header .library, .header .account, .header .readerNavMenuSearchButton {
  display: inline-block;
  color: #999;
}
.header .searchBox {
  overflow: hidden;
  display: block;
  padding: 0;
  text-align: left;
}
.header .search {
  outline: none;
  border: none;
  box-shadow: none;
  color: black;
  font-size:  18px;
  font-family: "adobe-garamond-pro", Georgia, serif;
  vertical-align: 1px;
  margin: 0;
}
.search-override {
  border-top: solid 1px #999;
  padding-top: 5px;
}
.header .home {
  display: inline-block;
  position: absolute;
  top: 3px;
  left: 50%;
  margin-left: -50px;
}
.header .home img {
  height: 18px;
  width: 92px;
  opacity: 0.6;
}
.header .accountLinks {
  display: inline-block;
  font-size: 15px;
}
.header .account, .header .notifications {
  display: inline-block;
  vertical-align: middle;
}
.header .library, .header .account {
  margin: 0px 17px;
  font-size: 24px;
}
.header .notifications {
  display: inline-block;
  font-family: "proxima-nova", "Helvetica Neue", Helvetica, sans-serif;
  line-height: 24px;
  height: 24px;
  width: 24px;
  text-align: center;
  border-radius: 15px;
  background-color: #aaa;
  color: white;
  font-size: 16px;
}
.header .notifications.unread {
  background-color: #EFB4B6;
}
.header .login {
  color: #999;
  margin: 0 15px;
  display: inline-block;
  line-height: 1;
}
.header .login .en {
  font-family: "proxima-nova", "Helvetica Neue", Helvetica, sans-serif;
}
.header .login .he {
  font-family: "Open Sans Hebrew", sans-serif;
}
.header .testWarning {
  display: inline-block;
  color: white;
  font-family: "proxima-nova", "Helvetica Neue", Helvetica, sans-serif;
  background-color: #EFB4B6;
  border-radius: 12px;
  font-size: 14px;
  line-height: 1;
  padding: 6px 16px;
  vertical-align: middle;
  height: 14px;
  max-width: 100%;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: pointer;
  margin-right: 15px;
}
.header .testWarning:hover {
  text-decoration: underline;
}
.header .he {
  /* temp, until we support hebrew header */
  display: none;
}
.testMessageBox {
  position: fixed;
  width: 100%;
  height: 100%;
  z-index: 5000;
}
.overlay {
  width: 100%;
  height: 100%;
  background-color: black;
  opacity: 0.3;
}
.testMessage {
  position: fixed;
  z-index: 5001;
  width: 450px;
  height: 180px;
  margin-top: -90px;
  margin-left: -225px;
  left: 50%;
  top: 50%;
  background-color: #F9F9F7;
  padding: 32px 20px;
  box-sizing: border-box;
  text-align: center;
}
.testMessage .title {
  font-size: 18px;
  line-height: 1.4;
}
.testMessage .button {
  margin-top: 20px;
}
.header .account img {
  height: 24px;
  width: 24px;
  opacity: 0.4;
  vertical-align: -3px;
}
.header .readerNavMenuSearchButton,
.header .readerNavMenuMenuButton {
  margin: 0 8px 0 6px;
  font-size: 17px;
  position: relative;
  top: -2px;
}
.header .headerNavContent {
  position: fixed;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  top: 0;
  padding-top: 54px;
  z-index: 1000;
}
.ui-autocomplete {
  position: absolute;
  background: white;
  list-style-type: none;
  padding: 6px 0;
  border: 1px solid #aaa;
  border-top: 1px solid #ddd;
  z-index: 1002 !important;
  font-family: "adobe-garamond-pro", Georgia, serif;
}
.ui-autocomplete .ui-menu-item a {
  padding: 4px 12px;
  font-size: 16px;
  color: black;
  cursor: pointer;
  display: block;
}
.ui-autocomplete .ui-menu-item a.ui-state-focus {
  background-color: #E9E9E7;
}
.ui-helper-hidden-accessible {
  display: none;
}
.multiPanel .readerPanelBox {
  box-sizing: border-box;
  padding-top: 54px;
}
.readerPanelBox {
  position: absolute;
  height: 100%;
  width: 100%;
}
.readerPanelBox + .readerPanelBox {
  border-left: 1px solid #eee;
}
.readerPanel {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
  background-color: inherit;
  font-family: "adobe-garamond-pro", Georgia, serif;
}
.readerContent {
  width: 100%;
  height: 100%;
  background-color: inherit;
}
.dark .readerContent {
  color: white;
}
.textColumn {
  width: 100%;
  height: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
  -webkit-overflow-scrolling: touch;
  position: relative;
  padding: 0px 0 40%;
  box-sizing: border-box;
  background-color: inherit;
}
/* Adjusting for 17px scrollbars, to keep content centered
   Only done in multiPanel mode now as a proxy for whether scrollbars take up width (on desktop they do, not on mobile) */
.multiPanel .english .textColumn, .multiPanel .bilingual .textColumn {
  padding-left: 17px;
}
.multiPanel .hebrew .textColumn {
  padding-right: 17px;
}
.wideColumn .textColumn {
  padding: 0 25px 50% 42px;
}
/* ... */

